-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
None
-
Qt Creator 6.0.1
-
None
-
383ea8a3617f9de3f31d66096160e0e729d8c5e4
The default CMake configurations in Kit cause warnings for compiler paths
CMAKE_CXX_COMPILER:STRING=%{Compiler:Executable:Cxx}
CMAKE_C_COMPILER:STRING=%{Compiler:Executable:C}
| For Gerrit Dashboard: QTCREATORBUG-26857 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 413358,2 | Docker: Fix bug with cmake warnings for compiler path with docker kits | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |